    + added debian/preinst to perform the upgrade
    + debian/control: added a dependency on db4.7-util
  * debian/control:
    + added myself as maintainer (see Adrian's changelog)
    + removed Jon Daley as Uploader, keeping Adrian
    + added Vcs-Git, Vcs-Browser, DMUA
    + bumped Standards-Version to 3.8.3
    + added ${misc:Depends} to Depends
    + bumping debhelper version to 7 in B-D
  * debian/rules: removing deprecated dh_clean -k in favour of dh_prep
  * debian/copyright:
    + added myself as adopter
    + changed the short version of the license to refer to GPL-2+
    + added a versioned reference to GPL-2 in common-licenses

  [Adrian von Bidder]
  * postgrey isn't orphaned anymore (closes: #544176)

  [Jon Daley]
  * LSB-compliant initscript, thanks to Vaclav Ovsik (closes: #523488)

 -- Antonio Radici <antonio@dyne.org>  Sun, 06 Sep 2009 11:00:16 +0100

postgrey (1.32-3) unstable; urgency=low

  * debconf warning of the port change.
    (Seems NEWS.Debian is not enough.  closes: #506122)

 -- Adrian von Bidder <cmot@debian.org>  Fri, 27 Feb 2009 22:07:24 +0100

postgrey (1.32-2) unstable; urgency=low

  * Should test with the config file as shipped. (closes: #504343, #504667)
  * Widened google whitelist entry (closes: #504382)

 -- Adrian von Bidder <cmot@debian.org>  Fri, 07 Nov 2008 16:50:38 +0100

postgrey (1.32-1) unstable; urgency=low

  * New upstream version
    - syslog facility patch now included upstream
  * Completely new packaging (move from svn to hg)
  * Change the default port from 60000 to postgrey's default 10023.

 -- Adrian von Bidder <cmot@debian.org>  Thu, 30 Oct 2008 11:16:51 +0100

postgrey (1.31-3) unstable; urgency=low

  * added eBay whitelist entry (reported by peterS)
  * fix recipient whitelist (closes: #487485)
  * admit that I don't know how postfix generates queue ids (closes: #480778)
  * allow specifying the syslog facility to report to (closes: #446489)