@@ -6,18 +6,17 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# hgdebuild:
-include debian/patches.mk
+include /usr/share/quilt/quilt.make
 
 # installation base directory
 BASE=$(CURDIR)/debian/postgrey
 
 build: build-stamp
 
-build-stamp:
-	touch build-stamp
+build-stamp: $(QUILT_STAMPFN)
+	touch $@
 
-clean:
+clean: unpatch
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
@@ -26,7 +25,7 @@ clean:
 install: build
 	dh_testdir
 	dh_testroot
-	dh_clean -k
+	dh_prep
 	dh_installdirs etc/postgrey
 
 	# for lack of an upstream Makefile
